# recipes-api-rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20241009190639_add_table_recipes.up.sql
src/: config.rs  database.rs  entities.rs  error.rs  handlers.rs  helper.rs  interface.rs  main.rs  repositories.rs  state.rs  validation.rs
