[package]
name = "recipes-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0.64"
envconfig = "0.11.0"
dotenvy = { version = "0.15.7" }
tower-http = { version = "0.6.1", features = ["cors"] }
